feat: Se solucionaron errores usando SonarQube